Added directories to app.yaml

--- a/app.yaml
+++ b/app.yaml
@@ -9,6 +9,15 @@ handlers:
   static_files: favicon.ico
   upload: favicon\.ico
 
+- url: /images
+  static_dir: images
+
+- url: /stylesheets
+  static_dir: stylesheets
+
+- url: /scripts
+  static_dir: scripts
+
 - url: .*
   script: main.app
 
